# chatbot-rag

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  entrypoint.sh  experiments.ipynb  pyproject.toml
backend/: Dockerfile
backend/src/: api.py  config.py  langgraph_setup.py  llm_handler.py  main.py  vector_db.py
backend/src/core/: config.py  logger.py
backend/src/handlers/: __init__.py  llm.py  vector_db.py
backend/src/langgraph/: nodes.py  setup.py  state.py  utils.py
backend/src/langgraph/edges/: grading.py
backend/src/langgraph/nodes/: __init__.py  agent.py  context.py  generation.py  grading.py  query_transform.py  retrieval.py  retrieving.py  rewriting.py  searching_web.py  web_search.py  web_searching.py
data/datasets/: RuBQ_2.0_dev.json
frontend/: Dockerfile
frontend/src/: main.py
llm/: Dockerfile.old
